Fixed z-index of ripple line

--- a/src/scss/tagsinput.scss
+++ b/src/scss/tagsinput.scss
@@ -23,6 +23,10 @@
         padding: $input-lg-padding-y $input-lg-padding-x;
         font-size: $input-lg-font-size;
     }
+
+    &.focus ~ .ripple-line {
+        z-index: 3;
+    }
 }
 
 .tagsinput-placeholder {
